[package]
name = "cargo-warp"
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "Build then copy your project binary to a remote host."
homepage = "https://github.com/MattCairns"
repository = "https://github.com/MattCairns"
readme = "README.md"
exclude = [ "flake.nix", "flake.lock", ]

[dependencies]
bsdiff = "0.2.1"
cargo_metadata = "0.18.1"
clap = { version = "4.5.7", features = ["cargo", "derive"] }
indicatif = "0.17.8"
owo-colors = "4.0.0"
qbsdiff = "1.4.3"
regex = "1.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.6.0"
